started the treacherous conversion from bad architecture to something readable that works

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -44,7 +44,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        Main
+                                        PreLoginClient
                                     </mainClass>
                                 </manifest>
                             </archive>
