created Client interface to allow switching between different client objects in repl. Prelogin seems to be working enough for now

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -44,7 +44,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        PreLoginClient
+                                        client.PreLoginClient
                                     </mainClass>
                                 </manifest>
                             </archive>
