--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,7 +26,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.1</version>
                 <configuration>
-                    <mainClass>PreLoginClient</mainClass>
+                    <mainClass>client.PreLoginClient</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -43,7 +43,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        PreLoginClient
+                                        client.PreLoginClient
                                     </mainClass>
                                 </manifest>
                             </archive>
